# paint

./: .gitignore  CMakeLists.txt  README.md
checkpoints/live_paint/coarse_unlit_brush_body/: live_paint_coarse_unlit_brush_body_metrics.json
settings/: lighting.ini  settings.ini
shaders/: common.hlsli  kuwahara_common.hlsl  live_paint_common.hlsl  material_ps.hlsl  material_vs.hlsl  modifier_common.hlsl  normal_akf_ps.hlsl  normal_blur_ps.hlsl  normal_blur_vs.hlsl  normal_modifier.hlsl
shaders/builtin/: material_vs.cso
src/: AppMesh.cpp  AppMesh.h  AssetScanner.cpp  AssetScanner.h  Camera.cpp  Camera.h  FileWatcher.cpp  FileWatcher.h  ImGuiLayer.cpp  ImGuiLayer.h  LivePaint.cpp  LivePaint.h  LivePaintAssets.cpp  LivePaintAssets.h  Material.cpp  Material.h  MeshGen.cpp  MeshGen.h  MeshLoader.cpp  MeshLoader.h  RendererD3D11.cpp  RendererD3D11.h  ShaderCompiler.cpp  ShaderCompiler.h  TextureLoader.cpp  TextureLoader.h  Types.h  UserSettings.cpp  UserSettings.h  main.cpp
tools/: ExportUnrealTextures.py  analyze_brush_readability.py  analyze_kuwahara_only_proof.ps1  analyze_live_paint_color_follow.py  capture_blur_visual_proof.ps1  capture_kuwahara_only_proof.ps1  capture_split_proof.ps1  cb_offset_test.cpp  compile_shaders.ps1  create_test_material.ps1  dev_run.ps1  dev_watch.ps1  dump_live_paint_graph.py  generate_icon.ps1  install_desktop.ps1  smoke_test.ps1  test_shaders.bat  update_desktop_shortcut.ps1
